feat: LLM 통합 - OpenAI Responses API로 관찰 종목 선정
- OpenAI Responses API (Structured Outputs) 지원
- 룰 기반 후보 생성 후 LLM이 1~3개 선택
- 후보 목록 밖 종목 선택 방지 (JSON Schema 강제)
- LLM 실패 시 룰 기반 fallback
- 일일 토큰 예산 관리
- .env.example 업데이트 (모든 환경변수 포함)
- README에 LLM 설정 가이드 추가

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ TELEGRAM_CHAT_ID=your_chat_id_here
 
 # 데이터 소스 설정 (선택사항)
 NEWS_PROVIDER=dummy  # "dummy" 또는 "rss"
-MARKET_PROVIDER=dummy
+MARKET_PROVIDER=dummy  # "dummy" 또는 "yahoo"
 
 # Google News RSS 검색 쿼리 (NEWS_PROVIDER=rss일 때 사용)
 # 단일 쿼리 (하위 호환)
@@ -26,3 +26,18 @@ WATCHLIST_KR=삼성전자,SK하이닉스,LG에너지솔루션
 
 # 가정 투자 금액 (원)
 PAPER_TRADE_AMOUNT=10000000
+
+# 월간 리포트 설정 (개발용)
+MONTH_OVERRIDE=  # 특정 월 리포트 생성 (YYYY-MM 형식, 예: 2025-12)
+MONTHLY_INCLUDE_DUMMY=false  # 월간 리포트에 dummy provider 거래 포함 여부
+
+# 텔레그램 전송 실패 시 워크플로우 실패 여부
+TELEGRAM_REQUIRED=false  # true면 전송 실패 시 워크플로우 실패, false면 warning만
+
+# LLM 설정 (OpenAI, 관찰 종목 선정용)
+LLM_ENABLED=false  # LLM 사용 여부
+OPENAI_API_KEY=  # OpenAI API 키 (LLM_ENABLED=true일 때 필요)
+LLM_MODEL=gpt-4o-mini  # LLM 모델명 (기본값: gpt-4o-mini)
+LLM_TEMPERATURE=0.2  # 온도 (0.0~1.0, 낮을수록 일관성 높음)
+LLM_MAX_TOKENS=800  # 최대 토큰 수
+LLM_DAILY_BUDGET_TOKENS=20000  # 일일 토큰 예산 (초과 시 자동 비활성화)
