docs: .env.example 텔레그램 설정 설명 개선
- 텔레그램 봇 토큰 및 채널 ID 설정 가이드 추가
- 채널 ID와 개인 채팅 ID 구분 설명
- TELEGRAM_REQUIRED 옵션 설명 보완
- .env 파일에서 텔레그램 설정 사용 가능함을 명확히 표시

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
+# ============================================
 # 텔레그램 봇 설정
+# ============================================
+# BotFather에서 발급받은 봇 토큰
+# 예: 1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
 TELEGRAM_BOT_TOKEN=your_bot_token_here
+
+# 텔레그램 채널 ID 또는 개인 채팅 ID
+# 채널 사용 시: -1001234567890 형태 (채널 정보에서 확인)
+# 개인 채팅 사용 시: 숫자 ID (예: 123456789)
 TELEGRAM_CHAT_ID=your_chat_id_here
+
+# 텔레그램 전송 실패 시 워크플로우 실패 여부
+# true: 전송 실패 시 워크플로우 실패
+# false: 전송 실패 시 warning만 출력 (기본값, dry-run 모드)
+TELEGRAM_REQUIRED=false
+
 
 # 데이터 소스 설정 (선택사항)
 NEWS_PROVIDER=dummy  # "dummy" 또는 "rss"
