--- a/.github/workflows/morning.yml
+++ b/.github/workflows/morning.yml
@@ -15,12 +15,12 @@ concurrency:
 jobs:
   generate-report:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # DB 파일 커밋/푸시를 위한 권한
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
