fix: git-auto-commit-action이 변경사항 없을 때 실패하지 않도록 수정
- continue-on-error: true 추가하여 변경사항이 없을 때 워크플로우 실패 방지
- monthly, morning, evening 모든 워크플로우에 적용

--- a/.github/workflows/monthly.yml
+++ b/.github/workflows/monthly.yml
@@ -48,4 +48,5 @@ jobs:
           commit_message: 'chore: update market.db (monthly report)'
           file_pattern: 'db/market.db'
           skip_dirty_check: true
+        continue-on-error: true  # 변경사항이 없을 때 실패하지 않도록
 
